重构用户Mobile端页面及逻辑

--- a/Application/Home/View/default/Addons/lists.html
+++ b/Application/Home/View/default/Addons/lists.html
@@ -94,7 +94,7 @@
                                 </volist>
 
                                 <!-- <a class="sort " href="#" title="排序">排序:高->低</a> -->
-                                <button type="button" class="sch-btn btn" href="javascript:;" id="search" url="{$search_url}">搜索</button>
+                                <button type="submit" class="sch-btn btn" href="javascript:;" id="search" url="{$search_url}">搜索</button>
                             </div>
                         </form>
                     </notempty>
