--- a/Addons/Shop/View/default/Order/lists.html
+++ b/Addons/Shop/View/default/Order/lists.html
@@ -1,10 +1,113 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<extend name="Base/no_side_common"/>
+<block name="body">
+    <div class="span9 page_message">
+        <section id="contents">
+            <include file="Addons/_nav"/>
+            <div class="table-bar">
+                <!-- 多维过滤 -->
+                <notempty name="muti_search">
+                    <form class="muti_search cf">
+                        <div class="" style="line-height: 30px;">
+                            <volist name='muti_search' id='vo'>
+                                <switch name="vo.type">
+                                    <case value="select">
+                                        <span>{$vo.title}：</span>
+                                        <select name="{$vo.name}" class="search-input input-small">
+                                            <volist name='vo.options' id='option'>
+                                                <option value="{$option.value}">
+                                                    <eq name='option.default_value' value='option.value'>selected
+                                                    </eq>
+                                                    >{$option.title}
+                                                </option>
+                                            </volist>
+                                        </select>
+                                    </case>
+                                    <case value="datetime">
+                                        <span>{$vo.title}：</span>
+                                        <input type="datetime" name="start_time"
+                                               class="search-input date input-small" value="{$vo.start_time}"
+                                               placeholder="请选择时间">
+                                        <span>至</span>
+                                        <input type="datetime" name="end_time" class="search-input date input-small"
+                                               value="{$vo.end_time}" placeholder="请选择时间">
+                                    </case>
+                                    <case value="checkbox">
+                                        <span>{$vo.title}：</span>
+                                        <volist name='vo.options' id='option'>
+                                            <input type="checkbox" name="{$option.name}" class=""
+                                                   value="{$option.value}">
+                                            <eq name='option.default_value' value='option.value'>checked</eq>
+                                            >{$option.title}
+                                        </volist>
+                                    </case>
+                                    <case value="radio">
+                                        <span>{$vo.title}：</span>
+                                        <volist name='vo.options' id='option'>
+                                            <input type="radio" name="{$option.name}" class=""
+                                                   value="{$option.value}">
+                                            <eq name='option.default_value' value='option.value'>checked</eq>
+                                            >{$option.title}
+                                        </volist>
+                                    </case>
+                                </switch>
+                            </volist>
 
-</body>
-</html>
+                            <!-- <a class="sort " href="#" title="排序">排序:高->低</a> -->
+                            <button type="submit" class="sch-btn btn" href="javascript:;" id="search"
+                                    url="{$search_url}">搜索
+                            </button>
+                        </div>
+                    </form>
+                </notempty>
+            </div>
+
+            <!-- 数据列表 -->
+            <div class="data-table">
+                <div class="table-striped">
+                    <table cellspacing="1">
+                        <!-- 表头 -->
+                        <thead>
+                        <tr>
+                            <if condition="$check_all">
+                                <th class="row-selected row-selected"><input type="checkbox" id="checkAll"
+                                                                             class="check-all regular-checkbox"><label
+                                        for="checkAll"></label></th>
+                            </if>
+                            <volist name="list_grids" id="field">
+                                <!--<empty name="field.width">
+                                  <th>{$field.title}</th>
+                                <else />
+                                  <th width="{$field.width}%">{$field.title}</th>
+                                </empty>-->
+                                <th>{$field.title}</th>
+                            </volist>
+                        </tr>
+                        </thead>
+
+                        <!-- 列表 -->
+                        <tbody>
+                        <volist name="list_data" id="data">
+                            <tr>
+                                <if condition="$check_all">
+                                    <td><input class="ids regular-checkbox" type="checkbox" value="{$data['id']}"
+                                               name="ids[]" id="check_{$data['id']}"><label
+                                            for="check_{$data['id']}"></label></td>
+                                </if>
+                                <volist name="list_grids" id="grid">
+                                    <td>{:get_list_field($data,$grid,$model)}</td>
+                                </volist>
+                            </tr>
+                        </volist>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+            <div class="page"> {$_page|default=''}</div>
+        </section>
+    </div>
+</block>
+<block name="script">
+    <script type="text/javascript">
+
+    </script>
+</block>
