--- a/Addons/Shop/View/default/Order/lists.html
+++ b/Addons/Shop/View/default/Order/lists.html
@@ -6,55 +6,21 @@
             <div class="table-bar">
                 <!-- 多维过滤 -->
                 <notempty name="muti_search">
-                    <form class="muti_search cf">
+                    <form class="muti_search cf" style="text-align: right " method="post" action="lists.html">
                         <div class="" style="line-height: 30px;">
-                            <volist name='muti_search' id='vo'>
-                                <switch name="vo.type">
-                                    <case value="select">
-                                        <span>{$vo.title}：</span>
-                                        <select name="{$vo.name}" class="search-input input-small">
-                                            <volist name='vo.options' id='option'>
-                                                <option value="{$option.value}">
-                                                    <eq name='option.default_value' value='option.value'>selected
-                                                    </eq>
-                                                    >{$option.title}
-                                                </option>
-                                            </volist>
-                                        </select>
-                                    </case>
-                                    <case value="datetime">
-                                        <span>{$vo.title}：</span>
-                                        <input type="datetime" name="start_time"
-                                               class="search-input date input-small" value="{$vo.start_time}"
-                                               placeholder="请选择时间">
-                                        <span>至</span>
-                                        <input type="datetime" name="end_time" class="search-input date input-small"
-                                               value="{$vo.end_time}" placeholder="请选择时间">
-                                    </case>
-                                    <case value="checkbox">
-                                        <span>{$vo.title}：</span>
-                                        <volist name='vo.options' id='option'>
-                                            <input type="checkbox" name="{$option.name}" class=""
-                                                   value="{$option.value}">
-                                            <eq name='option.default_value' value='option.value'>checked</eq>
-                                            >{$option.title}
-                                        </volist>
-                                    </case>
-                                    <case value="radio">
-                                        <span>{$vo.title}：</span>
-                                        <volist name='vo.options' id='option'>
-                                            <input type="radio" name="{$option.name}" class=""
-                                                   value="{$option.value}">
-                                            <eq name='option.default_value' value='option.value'>checked</eq>
-                                            >{$option.title}
-                                        </volist>
-                                    </case>
-                                </switch>
-                            </volist>
+                            <span>订单日期</span>
+                            <input type="datetime" name="search_date"
+                                   class="search-input date input-small" value="{$search_date}"
+                                   placeholder="输入日期 格式2015-12-11">
+                            <span>搜索关键字</span>
+                            <input type="text" name="search_key"
+                                   class="search-input date input-small" value="{$search_key}"
+                                   placeholder="请输入客户姓名 或者 手机号码">
+
 
                             <!-- <a class="sort " href="#" title="排序">排序:高->低</a> -->
-                            <button type="submit" class="sch-btn btn" href="javascript:;" id="search"
-                                    url="{$search_url}">搜索
+                            <button type="submit" class="sch-btn btn" id="searchBtn"
+                                    style="width: 5rem">搜索
                             </button>
                         </div>
                     </form>
