重构用户Mobile端页面及逻辑

--- a/Addons/Shop/View/default/Order/lists.html
+++ b/Addons/Shop/View/default/Order/lists.html
@@ -6,15 +6,15 @@
             <div class="table-bar">
                 <!-- 多维过滤 -->
                 <notempty name="muti_search">
-                    <form class="muti_search cf" style="text-align: right " method="post" action="lists.html">
+                    <form class="muti_search cf" style="text-align: right " method="post" action="{:addons_url('Shop://Order/lists')}">
                         <div class="" style="line-height: 30px;">
                             <span>订单日期</span>
                             <input type="datetime" name="search_date"
                                    class="search-input date input-small" value="{$search_date}"
-                                   placeholder="输入日期 格式2015-12-11">
-                            <span>搜索关键字</span>
+                                   placeholder="2015-12-11">
+                            <span>客户信息</span>
                             <input type="text" name="search_key"
-                                   class="search-input date input-small" value="{$search_key}"
+                                   class="search-input date input-small" value="{$search_keyword}"
                                    placeholder="请输入客户姓名 或者 手机号码">
 
 
