--- a/Addons/Shop/View/default/Order/lists.html
+++ b/Addons/Shop/View/default/Order/lists.html
@@ -13,11 +13,9 @@
                                class="search-input date input-small" value="{$search_date}"
                                placeholder="2015-12-11">
                         <span>客户信息</span>
-                        <input type="text" name="search_key"
+                        <input type="text" name="search_keyword"
                                class="search-input date input-small" value="{$search_keyword}"
-                               placeholder="请输入客户姓名 或者 手机号码">
-
-
+                               placeholder="请输入客户手机号码 或者 姓名" style="width: 12rem">
                         <!-- <a class="sort " href="#" title="排序">排序:高->低</a> -->
                         <button type="submit" class="sch-btn btn" id="searchBtn"
                                 style="width: 5rem">搜索
@@ -33,34 +31,28 @@
                         <!-- 表头 -->
                         <thead>
                         <tr>
-                            <if condition="$check_all">
-                                <th class="row-selected row-selected"><input type="checkbox" id="checkAll"
-                                                                             class="check-all regular-checkbox"><label
-                                        for="checkAll"></label></th>
-                            </if>
-                            <volist name="list_grids" id="field">
+                            <volist name="title_lists" id="field">
                                 <!--<empty name="field.width">
                                   <th>{$field.title}</th>
                                 <else />
                                   <th width="{$field.width}%">{$field.title}</th>
                                 </empty>-->
-                                <th>{$field.title}</th>
+                                <th>{$field}</th>
                             </volist>
                         </tr>
                         </thead>
 
                         <!-- 列表 -->
                         <tbody>
-                        <volist name="list_data" id="data">
+                        <volist name="order_lists" id="data">
                             <tr>
-                                <if condition="$check_all">
-                                    <td><input class="ids regular-checkbox" type="checkbox" value="{$data['id']}"
-                                               name="ids[]" id="check_{$data['id']}"><label
-                                            for="check_{$data['id']}"></label></td>
-                                </if>
-                                <volist name="list_grids" id="grid">
-                                    <td>{:get_list_field($data,$grid,$model)}</td>
-                                </volist>
+                                <td>{$data.order_number}</td>
+                                <td>{$data.goods}</td>
+                                <td>{$data.uid}</td>
+                                <td>{$data.total_price}</td>
+                                <td>{$data.cTime|time_format}</td>
+                                <td>{$data.pay_type|getNamebyPayStatus}</td>
+                                <td>{$data.status_code|getNamebyOrderStatus}</td>
                             </tr>
                         </volist>
                         </tbody>
