--- a/Addons/Shop/View/default/User/confirmOrder.html
+++ b/Addons/Shop/View/default/User/confirmOrder.html
@@ -39,29 +39,31 @@
                 </dl>
             </li>
         </volist>
+        <li class="mui-table-view-cell mui-media cart_item" style="text-align: center">
+            <span style="font-weight: bold">请就近选择一个提货点</span>
+        </li>
+        <volist name="fetch_address" id="address">
+            <li class="mui-table-view-cell mui-media cart_item" style="margin: 0">
+                <div class="mui-input-row mui-radio">
+                    <label>{$address.school} {$address.intro}</label>
+                    <input name="address_radio" type="radio" id="{$address.id}">
+                </div>
+            </li>
+        </volist>
         <li class="mui-table-view-cell mui-media cart_item">
             <textarea name="remark" id="remark" rows="5" style="margin: 0"
                       placeholder="欢迎给我们留言，提供您的意见和建议，我们将竭诚为您提供最优服务。"></textarea>
         </li>
     </ul>
-    <div class="mui-card">
-        <div class="mui-input-group">
-            <volist name="fetch_address" id="address">
-                <div class="mui-input-row mui-radio">
-                    <label>{$address.school} {$address.intro}</label>
-                    <input name="{$address.id}" type="radio">
-                </div>
-            </volist>
-        </div>
-    </div>
 </div>
 <script type="text/javascript" src="{:ADDON_PUBLIC_PATH}/user/js/jquery.min.js"></script>
 <script type="text/javascript" src="{:ADDON_PUBLIC_PATH}/user/js/mui.min.js"></script>
 <script type="text/javascript">
     mui.init();
     var seletedAddressId;
-    document.querySelector('.mui-input-group.mui-radio').addEventListener('selected',function(e){
-        seletedAddressId = e.detail.el.id;
+    mui('.mui-input-row.mui-radio').on('tap', 'input',function(){
+        alert(this.id);
+        seletedAddressId = this.id;
     });
 
     var submitOrderTab = document.getElementById("submitOrderTab");
