重构用户Mobile端页面及逻辑

--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -52,8 +52,9 @@
                                             <div class="goods-title">{$goods.title}</div>
                                             <div class="mui-ellipsis" style="max-height: 2rem; line-height: 1rem; white-space: normal; vertical-align: middle; overflow: hidden; margin-top: 0.3125rem">{$goods.content}</div>
                                             <div class="goods-price">
-                                                <strong class="price">¥{$goods.price|wp_money_format}</strong><span
+                                                <strong class="price">¥{$goods.price|wp_money_format}</strong>/<span>{$goods.spec_num}{$goods.spec_unit|getSpecUnitByID}</span><span
                                                     class="old-price">¥{$goods.old_price|wp_money_format}</span>
+                                                <span class="mui-badge mui-badge-danger">{$goods.goods_property|getGoodsPropertyByID}</span>
                                             </div>
                                         </dd>
                                     </dl>
