重构用户Mobile端页面及逻辑

--- a/Addons/Shop/View/default/User/confirmOrder.html
+++ b/Addons/Shop/View/default/User/confirmOrder.html
@@ -45,7 +45,7 @@
         <volist name="fetch_address" id="address">
             <li class="mui-table-view-cell mui-media cart_item" style="margin: 0">
                 <div class="mui-input-row mui-radio">
-                    <label>{$address.school} {$address.intro}</label>
+                    <label>{$address.intro}</label>
                     <input name="address_radio" type="radio" id="{$address.id}">
                 </div>
             </li>
