重构用户Mobile端页面及逻辑

--- a/Addons/Shop/View/default/Shop/lists.html
+++ b/Addons/Shop/View/default/Shop/lists.html
@@ -14,8 +14,8 @@
             <li><div class="s_i" style="padding: 1rem; width: auto; height: auto">
             	<!--<img src="{$vo.logo|get_cover_url}">-->
                 <p class="s_d">
-                	<span class="name">{$vo.title}</span>
-                    <span class="zera">{$vo.zone|getZeraNameByID} {$vo.city|getCityNameByID} {$vo.school}</span>
+                	<span class="name">{$vo.school}</span>
+                    <span class="zera">{$vo.zone|getZeraNameByID} {$vo.city|getCityNameByID}</span>
                     <span class="address">{$vo.intro}</span>
                     <span class="wechat">微信：{$vo.wechat}</span>
                     <span class="phone">电话：{$vo.mobile}</span>
