重构用户Mobile端页面及逻辑

--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -139,7 +139,7 @@
         //}
         //else
         //{
-            window.location.assign("{:addons_url('Shop://User/bindUser')}");
+        //    window.location.assign("{:addons_url('Shop://User/bindUser')}");
         //}
     });
 
