重构用户Mobile端页面及逻辑

--- a/Addons/Shop/View/default/User/myOrder.html
+++ b/Addons/Shop/View/default/User/myOrder.html
@@ -31,7 +31,7 @@
                             <dl class="goods_item" style="margin:0">
                                 <dt class="goods-picture-wrapper mui-pull-left">
                                     <img class="mui-media-object goods_img"
-                                         src="{goods.cover|get_cover_url}" style="width: 80%; max-width: 80%"/>
+                                         src="{$goods.cover|get_cover_url}" style="width: 80%; max-width: 80%"/>
                                 </dt>
                                 <dd class="mui-media-body goods_desc">
                                     <div class="goods-title name">
