重构用户Mobile端页面及逻辑

--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -36,6 +36,9 @@
                                 <img src="{$slide.img|get_cover_url}">
                             </volist>
                         </div>
+                        <div class="category">
+
+                        </div>
                         <ul id="goodList" class="mui-table-view">
                             <volist name="goodsList" id="goods">
                                 <li class="mui-table-view-cell mui-media">
