重构用户Mobile端页面及逻辑

--- a/Addons/Shop/View/default/Public/user/css/app.css
+++ b/Addons/Shop/View/default/Public/user/css/app.css
@@ -108,6 +108,10 @@ body{
 	height: 5.625rem;
 }
 
+.goods-category{
+	color:#e74c3c;
+}
+
 .mui-table-view .mui-media-object {
 	height: 5.625rem;
 	line-height: 5.625rem;
