--- a/Addons/Shop/View/default/User/index_bak2.html
+++ b/Addons/Shop/View/default/User/index_bak2.html
@@ -49,7 +49,7 @@
                                     <dl style="margin: 0">
                                         <dt class="goods-picture-wrapper mui-pull-left">
                                             <img class="mui-media-object" style="width: 100%; max-width: 100%"
-                                                 data-original="{$goods.cover|get_cover_url}"/>
+                                                 src="{$goods.cover|get_cover_url}"/>
                                             <i class="oblique-tag oblique-tag-presell">热卖</i>
                                         </dt>
                                         <dd class="operation-wrapper mui-pull-right">
@@ -94,10 +94,9 @@
 <include file="./Addons/Shop/View/default/User/_footer.html"/>
 <script type="text/javascript" src="{:ADDON_PUBLIC_PATH}/user/js/jquery.min.js"></script>
 <script type="text/javascript" src="{:ADDON_PUBLIC_PATH}/user/js/mui.min.js?v={:SITE_VERSION}"></script>
-<script type="text/javascript" src="{:ADDON_PUBLIC_PATH}/user/js/jquery.lazyload.js?v={:SITE_VERSION}"></script>
 <!--<script type="text/javascript" src="{:ADDON_PUBLIC_PATH}/user/js/mui.lazyload.js?v={:SITE_VERSION}"></script>
-<script type="text/javascript" src="{:ADDON_PUBLIC_PATH}/user/js/mui.lazyload.img.js?v={:SITE_VERSION}"></script>-->
-<!--<script type="text/javascript" src="{:ADDON_PUBLIC_PATH}/user/js/mui.pullToRefresh.js?v={:SITE_VERSION}"></script>
+<script type="text/javascript" src="{:ADDON_PUBLIC_PATH}/user/js/mui.lazyload.img.js?v={:SITE_VERSION}"></script>
+<script type="text/javascript" src="{:ADDON_PUBLIC_PATH}/user/js/mui.pullToRefresh.js?v={:SITE_VERSION}"></script>
 <script type="text/javascript"
         src="{:ADDON_PUBLIC_PATH}/user/js/mui.pullToRefresh.material.js?v={:SITE_VERSION}"></script>-->
 <script type="text/javascript">
@@ -111,15 +110,7 @@
             indicators: true, //是否显示滚动条
             deceleration: deceleration
         });
-
     })(mui);
-
-    $(function() {
-        $("img.mui-media-object").lazyload({
-            effect : "fadeIn"
-        });
-
-    });
 
     var userInfo = document.getElementById("userInfoHF");
     function addToCart(goodsId){
