--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -94,7 +94,7 @@
 <include file="./Addons/Shop/View/default/User/_footer.html"/>
 <script type="text/javascript" src="{:ADDON_PUBLIC_PATH}/user/js/jquery.min.js"></script>
 <script type="text/javascript" src="{:ADDON_PUBLIC_PATH}/user/js/mui.min.js?v={:SITE_VERSION}"></script>
-<script type="text/javascript" src="{:ADDON_PUBLIC_PATH}/user/js/jquery.lazyload.js?v={:SITE_VERSION}"></script>
+<script type="text/javascript" src="{:ADDON_PUBLIC_PATH}/user/js/jquery.lazyload.min.js?v={:SITE_VERSION}"></script>
 <!--<script type="text/javascript" src="{:ADDON_PUBLIC_PATH}/user/js/mui.lazyload.js?v={:SITE_VERSION}"></script>
 <script type="text/javascript" src="{:ADDON_PUBLIC_PATH}/user/js/mui.lazyload.img.js?v={:SITE_VERSION}"></script>-->
 <!--<script type="text/javascript" src="{:ADDON_PUBLIC_PATH}/user/js/mui.pullToRefresh.js?v={:SITE_VERSION}"></script>
@@ -103,7 +103,7 @@
 <script type="text/javascript">
     mui.init();
 
-    (function ($) {
+    /*(function ($) {
         //阻尼系数
         var deceleration = mui.os.ios ? 0.003 : 0.0009;
         $('.mui-scroll-wrapper').scroll({
@@ -112,7 +112,7 @@
             deceleration: deceleration
         });
 
-    })(mui);
+    })(mui);*/
 
     $(function() {
 
