--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -103,16 +103,16 @@
 <script type="text/javascript">
     mui.init();
 
-    /*(function ($) {
+    (function ($) {
         //阻尼系数
         var deceleration = mui.os.ios ? 0.003 : 0.0009;
         $('.mui-scroll-wrapper').scroll({
             bounce: false,
-            indicators: true, //是否显示滚动条
+            indicators: false, //是否显示滚动条
             deceleration: deceleration
         });
 
-    })(mui);*/
+    })(mui);
 
     $(function() {
 
