--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -38,7 +38,7 @@
                         </div>
                         <ul class="mui-table-view mui-grid-view mui-grid-9">
                             <volist name="categoryList" id="goodsCategory">
-                                <li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-4"><a href="{:addons_url('Shop://User/index', array('cid'=>$goodsCategory['id']))}">
+                                <li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-4" style="padding: 0.1875rem 0.9375rem"><a href="{:addons_url('Shop://User/index', array('cid'=>$goodsCategory['id']))}">
                                     <!--<span class="mui-icon mui-icon-home"></span>-->
                                     <div class="mui-media-body goods-category" style="color: #e74c3c;">{$goodsCategory.title}</div></a></li>
                             </volist>
