bug fix: 配货单计算问题

--- a/Addons/Shop/View/default/User/myOrder.html
+++ b/Addons/Shop/View/default/User/myOrder.html
@@ -7,7 +7,7 @@
 </style>
 <body>
 <div class="mui-bar mui-bar-nav">
-    <a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
+    <a id="backLnk" class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 
     <h1 class="mui-title">我的订单</h1>
 </div>
@@ -77,7 +77,10 @@
 <script type="text/javascript">
     mui.init({});
 
-
+    var backLnk = document.getElementById("backLnk");
+    backLnk.addEventListener("tap", function(){
+        window.location.assign("{:addons_url('Shop://User/index')}");
+    });
 </script>
 </body>
 </html>
