bug fix: 配货单计算问题

--- a/Addons/Shop/View/default/Public/user/css/app.css
+++ b/Addons/Shop/View/default/Public/user/css/app.css
@@ -117,6 +117,14 @@ body{
 	line-height: 5.625rem;
 }
 
+.mui-bar-tab .mui-tab-item .mui-icon~.mui-tab-label{
+	font-size:0.875rem;
+}
+
+.mui-bar-tab .mui-tab-item{
+	color: white;
+}
+
 i {
 	margin: 0;
 	padding: 0;
