bug fix: 配货单计算问题

--- a/Addons/Shop/View/default/Order/orderSheet.html
+++ b/Addons/Shop/View/default/Order/orderSheet.html
@@ -39,7 +39,7 @@
                             <tr>
                                 <td>{$goodsData['title']}</td>
                                 <td>{$goodsData['num']}</td>
-                                <td>{$goodsData['unit']|getSpecUnitByID}</td>
+                                <!--<td>{$goodsData['unit']|getSpecUnitByID}</td>-->
                             </tr>
                         </volist>
                         </tbody>
