新功能：增加销售统计

--- a/Addons/Shop/View/default/Order/sales.html
+++ b/Addons/Shop/View/default/Order/sales.html
@@ -6,7 +6,7 @@
             <div class="table-bar">
                 <!-- 多维过滤 -->
                 <form class="muti_search cf" style="text-align: right " method="post"
-                      action="{:addons_url('Shop://Order/orderSheet')}">
+                      action="{:addons_url('Shop://Order/sales')}">
                     <div class="" style="line-height: 30px;">
                         <span>起始日期</span>
                         <input type="datetime" name="start"
