新功能：增加销售统计

--- a/Addons/Shop/View/default/Order/sales.html
+++ b/Addons/Shop/View/default/Order/sales.html
@@ -51,6 +51,10 @@
                 </div>
             </div>
 
+            <div>
+                <p>销售总额:￥ {$total_amount} 元</p>
+            </div>
+
             <div style="text-align: center">
                 <p>
                     <input id="btnPrint" type="button" class="pinrt-btn btn" value="打印" style="width: 5rem" />
