--- a/Addons/Shop/View/default/Order/sales.html
+++ b/Addons/Shop/View/default/Order/sales.html
@@ -51,7 +51,7 @@
                 </div>
             </div>
 
-            <div>
+            <div style="text-align: center">
                 <p>销售总额:￥ {$total_amount} 元</p>
             </div>
 
