新功能：增加销售统计

--- a/Addons/Shop/View/default/Order/sales.html
+++ b/Addons/Shop/View/default/Order/sales.html
@@ -51,7 +51,7 @@
                 </div>
             </div>
 
-            <div style="text-align: center">
+            <div style="text-align: center; margin: 0.625rem 0; font-weight: bold; color:#e74c3c">
                 <p>销售总额:￥ {$total_amount} 元</p>
             </div>
 
